# django-urlconfchecks

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  changelog.html  configuration.html  contributing.html  index.html  installation.html  makefile  mkdocs.yml  pyproject.toml  pytest.ini  release-notes.md  search.js  search.json  setup.cfg  sitemap.xml  usage.html  zensical.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  dev.yml  preview.yml  release.yml
changelog/: index.html
configuration/: index.html
contributing/: index.html
django_urlconfchecks/: __init__.py  apps.py  check.py  cli.py  cli_utils.py  config.py  django_urlconfchecks.py  url_checker.py
docs/: api.md  configuration.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_as_django_app.py  test_cli.py  test_frameworks.py  test_url_checker.py  utils.py  views.py
tests/dummy_project/: __init__.py  settings.py  views.py
tests/dummy_project/urls/: __init__.py  admin_urls.py  annotated_union.py  cbv_urls.py  child_urls.py  converter_urls.py  correct_urls.py  drf_urls.py  future_annotation_mismatch.py  future_annotations.py  future_converter_annotation_mismatch.py  future_converter_annotations.py  future_default_args.py  future_unresolved_annotations.py  includes.py  incorrect_urls.py  ninja_urls.py  optional_args.py  parameterized_generics.py  parent_urls.py  path_kwargs_urls.py
tests/urls/: child_urls.py  correct_urls.py  incorrect_urls.py  parent_urls.py
usage/: index.html
