[tool]
[tool.poetry]
name = "django-urlconfchecks"
version = "0.11.0"
homepage = "https://github.com/AliSayyah/django-urlconfchecks"
description = "a python package for type checking the urls and associated views."
authors = ["ali sayyah <ali.sayyah2@gmail.com>"]
readme = "README.md"
license = "GPLv3"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Framework :: Django :: 5.2',
    'Framework :: Django :: 6.0',
]
packages = [
    { include = "django_urlconfchecks" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
urlconfchecks = "django_urlconfchecks.cli:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
# Django compatibility depends on Python version.
#  - Python 3.10-3.12: Django 4.2+ (up to <6.1)
#  - Python 3.13: Django 5.1.3+ (up to <6.1)
#  - Python 3.14: Django 5.2.8+ (up to <6.1)
Django = [
    { version = ">=4.2,<6.1", markers = "python_version < '3.13'" },
    { version = ">=5.1.3,<6.1", markers = "python_version == '3.13'" },
    { version = ">=5.2.8,<6.1", markers = "python_version >= '3.14'" },
]
typer = { extras = ["all"], version = ">=0.9.0,<1.0.0" }

black = { version = "^25.1.0", optional = true }
isort = { version = "^6.0", optional = true }
flake8 = { version = "^7.2.0", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = { version = "^1.15.0", optional = true }
pytest = { version = "^8.0.2", optional = true }
pytest-cov = { version = "^6.1.1", optional = true }
pytest-django = { version = "^4.5.2", optional = true }
tox = { version = "^4.13.0", optional = true }
virtualenv = { version = "^20.2.2", optional = true }
mkdocs = { version = "^1.5.3", optional = true }
mkdocs-include-markdown-plugin = { version = "^7.1.5", optional = true }
mkdocs-material = { version = "^9.5.11", optional = true }
twine = { version = "^6.1.0", optional = true }
mkdocs-autorefs = { version = "^1.4.0", optional = true }
pre-commit = { version = "^4.2.0", optional = true }
toml = { version = "^0.10.2", optional = true }
bump2version = { version = "^1.0.1", optional = true }
Markdown = { version = "^3.3.4", optional = true }

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "pytest-django",
    "pyupgrade",
]

dev = ["tox", "pre-commit", "virtualenv", "twine", "toml", "bump2version", 'Markdown']

doc = [
    'Markdown',
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-autorefs"
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
