[project]
name = "django-urlconfchecks"
version = "0.13.1"
description = "a python package for type checking the urls and associated views."
authors = [{ name = "ali sayyah", email = "ali.sayyah2@gmail.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "Django>=4.2,<6.1 ; python_version < '3.13'",
    "Django>=5.1.3,<6.1 ; python_version == '3.13'",
    "Django>=5.2.8,<6.1 ; python_version >= '3.14'",
    "typer>=0.9.0,<1.0.0",
    "tomli>=2.0.1,<3 ; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.2,<10",
    "ruff>=0.14.0,<1",
    "mypy>=1.15.0,<2",
    "pytest-cov>=6.1.1,<8",
    "pytest-django>=4.5.2,<5",
    "pyupgrade>=3.19,<4",
]
dev = [
    "tox>=4.13.0,<5",
    "pre-commit>=4.2.0,<5",
    "virtualenv>=20.2.2,<21",
    "twine>=6.1.0,<7",
    "toml>=0.10.2,<0.11",
    "bump2version>=1.0.1,<2",
    "Markdown>=3.3.4,<4",
]
doc = [
    "Markdown>=3.3.4,<4",
    "mkdocs>=1.5.3,<2",
    "mkdocs-include-markdown-plugin>=7.1.5,<8",
    "mkdocs-material>=9.5.11,<10",
    "mkdocs-autorefs>=1.4.0,<2",
]

[project.urls]
Homepage = "https://github.com/AliSayyah/django-urlconfchecks"

[project.scripts]
urlconfchecks = "django_urlconfchecks.cli:app"

[tool.hatch.build.targets.sdist]
include = [
    "django_urlconfchecks",
    "tests",
]

[tool.hatch.build.targets.wheel]
include = ["django_urlconfchecks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    ".uv-cache",
    ".uv-tools",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "site",
    "docs/_build",
    "docs/site",
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D", "W", "C90"]
ignore = ["E203", "E266", "D107", "C901"]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D101", "D102", "D103"] }

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"
