[project]
name = "django-urlconfchecks"
version = "0.13.1"
description = "a python package for type checking the urls and associated views."
authors = [{ name = "ali sayyah", email = "ali.sayyah2@gmail.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "Django>=4.2,<6.1 ; python_version < '3.13'",
    "Django>=5.1.3,<6.1 ; python_version == '3.13'",
    "Django>=5.2.8,<6.1 ; python_version >= '3.14'",
    "typer>=0.9.0,<1.0.0",
    "tomli>=2.0.1,<3 ; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest~=9.0.2",
    "ruff~=0.14.10",
    "pytest-cov~=7.0.0",
    "pytest-django~=4.11.1",
    "pyupgrade~=3.21.2",
    "coverage[toml]~=7.13.1",
    "ty~=0.0.8",
    "djangorestframework~=3.16.1",
    "django-ninja~=1.5.1",
]
dev = [
    "tox~=4.32.0",
    "tox-uv~=1.29.0",
    "pre-commit~=4.5.1",
    "virtualenv>=20.35.4,<20.37.0",
    "twine~=6.2.0",
    "toml~=0.10.2",
    "bump2version~=1.0.1",
    "Markdown~=3.10",
]
doc = [
    "Markdown~=3.10",
    "mkdocs~=1.6.1",
    "mkdocs-include-markdown-plugin~=7.2.0",
    "mkdocs-material~=9.7.1",
    "mkdocs-autorefs~=1.4.3",
]

[project.urls]
Homepage = "https://github.com/AliSayyah/django-urlconfchecks"

[project.scripts]
urlconfchecks = "django_urlconfchecks.cli:app"

[tool.hatch.build.targets.sdist]
include = [
    "django_urlconfchecks",
    "tests",
]

[tool.hatch.build.targets.wheel]
include = ["django_urlconfchecks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    ".uv-cache",
    ".uv-tools",
    ".ruff_cache",
    ".pytest_cache",
    "build",
    "dist",
    "site",
    "docs/_build",
    "docs/site",
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D", "W", "C90"]
ignore = ["E203", "E266", "D107", "C901"]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D101", "D102", "D103"] }

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tests.dummy_project.settings"

[tool.coverage.run]
# omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1.1"]
env_list = [
    "py310-django42",
    "py311-django42",
    "py312-django42",
    "py310-django50",
    "py311-django50",
    "py312-django50",
    "py310-django51",
    "py311-django51",
    "py312-django51",
    "py313-django51",
    "py310-django52",
    "py311-django52",
    "py312-django52",
    "py313-django52",
    "py314-django52",
    "py312-django60",
    "py313-django60",
    "py314-django60",
    "format",
    "lint",
    "build",
]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
allowlist_externals = ["pytest"]
extras = ["test"]
pass_env = ["*"]
set_env = { PYTHONPATH = "{tox_root}", PYTHONWARNINGS = "ignore" }
commands = [
    [
        "pytest",
        "--cov=django_urlconfchecks",
        "--cov-branch",
        "--cov-report=xml",
        "--cov-report=term-missing",
        "tests",
    ],
]

[tool.tox.env.py310-django42]
deps = ["django==4.2.8"]

[tool.tox.env.py311-django42]
deps = ["django==4.2.8"]

[tool.tox.env.py312-django42]
deps = ["django==4.2.8"]

[tool.tox.env.py310-django50]
deps = ["django==5.0.0"]

[tool.tox.env.py311-django50]
deps = ["django==5.0.0"]

[tool.tox.env.py312-django50]
deps = ["django==5.0.0"]

[tool.tox.env.py310-django51]
deps = ["django==5.1.3"]

[tool.tox.env.py311-django51]
deps = ["django==5.1.3"]

[tool.tox.env.py312-django51]
deps = ["django==5.1.3"]

[tool.tox.env.py313-django51]
deps = ["django==5.1.3"]

[tool.tox.env.py310-django52]
deps = ["django==5.2.8"]

[tool.tox.env.py311-django52]
deps = ["django==5.2.8"]

[tool.tox.env.py312-django52]
deps = ["django==5.2.8"]

[tool.tox.env.py313-django52]
deps = ["django==5.2.8"]

[tool.tox.env.py314-django52]
deps = ["django==5.2.8"]

[tool.tox.env.py312-django60]
deps = ["django==6.0.0"]

[tool.tox.env.py313-django60]
deps = ["django==6.0.0"]

[tool.tox.env.py314-django60]
deps = ["django==6.0.0"]

[tool.tox.env.format]
allowlist_externals = ["ruff"]
commands = [
    ["ruff", "format", "django_urlconfchecks", "tests"],
    ["ruff", "check", "--select", "I", "--fix", "django_urlconfchecks", "tests"],
]

[tool.tox.env.lint]
allowlist_externals = ["ruff", "ty"]
commands = [
    ["ruff", "check", "django_urlconfchecks", "tests"],
    ["ty", "check", "django_urlconfchecks", "tests"],
]

[tool.tox.env.build]
allowlist_externals = ["uv", "mkdocs", "twine"]
extras = ["doc", "dev"]
commands = [
    ["uv", "build"],
    ["mkdocs", "build"],
    ["twine", "check", "dist/*"],
]
